--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Harambee Imports</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link href="styles.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -18,11 +19,24 @@
     <![endif]-->
   </head>
   <body>
+    <nav>
+      <ul>
+        <li>
+          <a href= "index.html">  Home </a>
+        </li><li>
+          <a href = "about.html"> About</a>
+        </li><li>
+          <a href = "products.html"> Products </a>
+        </li><li>
+        <a href = "contact.html">  Contact </a>
+        </li>
+      </ul>
+    </nav>
     <h1>Harambee Imports</h1>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </body>
 </html>
