--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </li>
       </ul>
     </nav>
-    <h1>Harambee Imports</h1>
+    <h1 id="main-title">Harambee Imports</h1>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
