Minor changes to carousel

--- a/index.html
+++ b/index.html
@@ -36,26 +36,26 @@
 <!-- Carousel! -->
 
 
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+<div id="main-carousel" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <!--  Ability for it to slide -->
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#main-carousel" data-slide-to="0" class="actives"></li>
+    <li data-target="#main-carousel" data-slide-to="1"></li>
+    <li data-target="#main-carousel" data-slide-to="2"></li>
   </ol>
   <div class="carousel-inner" role="listbox">
 
     <div class="item active">
-      <img data-src="holder.js/900x500/auto/#777:#555/text:Kids Get Together To Make Products" alt="Kids Get Together To Make Products">
+      <img src="images/classroom.jpg" alt="Kids Get Together To Make Products">
 
       <div class="carousel-caption">
         <h3>Children</h3>
-        <p> from 6th - 8th grade aare making products for your satification and their education. Learn More on the About page.</p>
+        <p> from 6th - 8th grade are making products for your satification and their education. Learn More on the About page.</p>
       </div>
     </div>
 
     <div class="item">
-      <img data-src="holder.js/900x500/auto/#666:#444/text:Harambee!" alt="Harambee!">
+      <img src="images/HCSpagebanner.jpg" alt="Harambee!">
 
       <div class="carousel-caption">
         <p>Harambee means, "come togetheer and move it forward. You can make donations by contacting us. For contact info, see Contact page." </p>
@@ -63,20 +63,20 @@
     </div>
 
     <div class="item">
-      <img data-src="holder.js/900x500/auto/#555:#333/text:Buy Products Made Genuinly Form Scratch" alt="Buy Products Made Genuinly Form Scratch">
+      <img src="images/teenagers.jpg" alt="Buy Products Made Genuinly Form Scratch">
       <div class="carousel-caption">
         <h3>Awesome Quality</h3>
-        <p>The products were made and approved by experts. See our products to explore these projects.</p>
+        <p>The products were made by kids and approved by experts. See our products to explore these projects.</p>
       </div>
     </div>
 
   </div>
 
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+  <a class="left carousel-control" href="#main-carousel" role="button" data-slide="prev">
     <span class="icon-prev" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+  <a class="right carousel-control" href="#main-carousel" role="button" data-slide="next">
     <span class="icon-next" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
