products and about page

--- a/products.html
+++ b/products.html
@@ -34,6 +34,17 @@
     </nav>
     <h1 id="main-title">Harambee Imports</h1>
 <!--class start-->
+<div class= "sideBar">
+<!--Alphabetical Ordered for the Side Bar-->
+    <p><a href= "products/CardTribes.html"><br>Assorted Cards</a></p>
+    <p><a href= "products/bookbag.html">Book Bag</a></p>
+    <p><a href= "products/frameBook.html">Book Frame</a></p>
+    <p><a href= "products/clothOrnament.html">Cloth Ornaments</a></p>
+    <p><a href= "products/hairBerett.Pin.html">Hair Berret Pin</a></p>
+    <p><a href= "products/frameBook.html">Book Frame</a></p>
+</div>
+
+<div class= "innerBox">
     <div class = "product-box">
       <img src="images/products/bookBag.Salmon.jpg"/>
       <h4><a href="products/bookbag.html">Book Bag</a></h4>
@@ -53,17 +64,19 @@
       <img src="images/products/frameBook.jpg"/>
       <h4><a href="products/frameBook.html">Book Frame</a></h4>
     </div>
-
-  <!--  <div class = "product-box">
+<!--
+<div class = "product-box">
       <img src="images/products/hairBerett.Pin.jpg"/>
-      <h4><a href="products/bookbag.html">Hair Berret Pin</a></h4>
+      <h4><a href="products/hairBerett.Pin.html">Hair Berret Pin</a></h4>
     </div>
+
 
     <div class = "product-box">
       <img src="images/products/placemat.Coasters.jpg"/>
       <h4><a href="products/bookbag.html">Placemat Coasters</a></h4>
     </div>
--->
+  -->
+
     <div class="product-box">
       <div class="product-image" id="product-image-coasters"></div>
       <h4><a href="products/placemat.html">Placemat Coasters</a></h4>
@@ -73,6 +86,6 @@
       <div class ="product-image" id= "pin-image"></div>
       <h4><a href="products/hairBerett.Pin.html">Hair Berret Pin</a></h4>
     </div>
-
+</div>
   </body>
   </html>
