--- a/products.html
+++ b/products.html
@@ -1,91 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Harambee Imports</title>
+---
+layout: default
+---
+<h1 class="page-title"> HANDMADE CRAFTS - Product Line </h1>
+<p class="page-description">These are just some of the crafts items that will be on sale in the lobby before and after the Central Teaching on Sunday, December 3rd.</p>
+<div class="products">
+  <div class="product">
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1398834/ornaments.png">
+    <h3><a href="/products/ornements.html">Christmas Ornaments</a></h3>
+  </div>
+  <div class="product">
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1398834/mats.png">
+    <h3><a href="/products/mats.html">Table Placemats and Coasters</a></h3>
+  </div>
+  <div class="product">
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1398834/cards.png">
+    <h3><a href="/products/cards.html">Greeting Cards</a></h3>
+  </div>
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link href="styles.css" rel="stylesheet">
+  <div class="product">
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1398834/bookbags.png">
+    <h3><a href="/products/bookbags.html">Bookbags</a></h3>
+  </div>
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body id = "products">
-    <nav>
-      <ul>
-        <li>
-          <a href= "index.html">  Home </a>
-        </li><li>
-          <a href = "about.html"> About</a>
-        </li><li>
-          <a href = "products.html"> Products </a>
-        </li><li>
-        <a href = "contact.html">  Contact </a>
-        </li>
-      </ul>
-    </nav>
-    <h1 id="main-title">Harambee Imports</h1>
-<!--class start-->
-<div class= "sideBar">
-<!--Alphabetical Ordered for the Side Bar-->
-    <p><a href= "products/CardTribes.html"><br>Assorted Cards</a></p>
-    <p><a href= "products/bookbag.html">Book Bag</a></p>
-    <p><a href= "products/frameBook.html">Book Frame</a></p>
-    <p><a href= "products/clothOrnament.html">Cloth Ornaments</a></p>
-    <p><a href= "products/hairBerett.Pin.html">Hair Berret Pin</a></p>
-    <p><a href= "products/frameBook.html">Book Frame</a></p>
+  <div class="product">
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1398834/laptop-bags.png">
+    <h3><a href="/products/laptop-bags.html">Laptop Shoulder Bags</a></h3>
+  </div>
+
+  <div class="product">
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1398834/fashion-apparel.png">
+    <h3><a href="/products/fashion-apparel.html">Fashion Apparel</a></h3>
+  </div>
+
 </div>
-
-<div class= "innerBox">
-    <div class = "product-box">
-      <img src="images/products/bookBag.Salmon.jpg"/>
-      <h4><a href="products/bookbag.html">Book Bag</a></h4>
-    </div>
-
-    <div class = "product-box">
-      <img src="images/products/Cards.Hilltribes.jpg"/>
-      <h4><a href="products/CardTribes.html">Assorted Cards</a></h4>
-    </div>
-
-    <div class = "product-box">
-      <img src="images/products/clothOrnaments.jpg"/>
-      <h4><a href="products/clothOrnament.html">Cloth Ornaments</a></h4>
-    </div>
-
-    <div class = "product-box">
-      <img src="images/products/frameBook.jpg"/>
-      <h4><a href="products/frameBook.html">Book Frame</a></h4>
-    </div>
-<!--
-<div class = "product-box">
-      <img src="images/products/hairBerett.Pin.jpg"/>
-      <h4><a href="products/hairBerett.Pin.html">Hair Berret Pin</a></h4>
-    </div>
-
-
-    <div class = "product-box">
-      <img src="images/products/placemat.Coasters.jpg"/>
-      <h4><a href="products/bookbag.html">Placemat Coasters</a></h4>
-    </div>
-  -->
-
-    <div class="product-box">
-      <div class="product-image" id="product-image-coasters"></div>
-      <h4><a href="products/placemat.html">Placemat Coasters</a></h4>
-    </div>
-
-    <div class = "product-box">
-      <div class ="product-image" id= "pin-image"></div>
-      <h4><a href="products/hairBerett.Pin.html">Hair Berret Pin</a></h4>
-    </div>
-</div>
-  </body>
-  </html>
