DRY product layout

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a href="#">Mission</a>
     </div>
     <div class="info-box hand-made-crafts">
-      <a href="#products">Handmade Crafts</a>
+      <a href="/products">Handmade Crafts</a>
     </div>
   </div>
   <p class="caption">Harambee Imports is an extracurricular activity at Harambee Christian School for middle school students. Its goal is to train students in basic economic principles by running a business that earns money for the school.</p>
