--- a/products.html
+++ b/products.html
@@ -13,7 +13,7 @@
   </div>
   <div class="product">
     <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1398834/cards.png">
-    <h3><a href="/products/cards.html">Greeting Cards</a></h3>
+    <h3><a href="/products/greeting-cards.html">Greeting Cards</a></h3>
   </div>
 
   <div class="product">
