Serve local images

--- a/products.html
+++ b/products.html
@@ -4,30 +4,30 @@
 <p class="page-description">These are just some of the crafts items that will be on sale in the lobby before and after the Central Teaching on Sunday, December 3rd.</p>
 <div class="products">
   <div class="product">
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1398834/ornaments.png">
-    <h3><a href="/products/ornements.html">Christmas Ornaments</a></h3>
+    <img src="/images/products/ornaments/ornaments-1.png">
+    <h3><a href="/products/ornaments.html">Christmas Ornaments</a></h3>
   </div>
   <div class="product">
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1398834/mats.png">
+    <img src="/images/products/placemats/mats-1.png">
     <h3><a href="/products/mats.html">Table Placemats and Coasters</a></h3>
   </div>
   <div class="product">
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1398834/cards.png">
+    <img src="/images/products/greeting-cards/greeting-cards-1.png">
     <h3><a href="/products/greeting-cards.html">Greeting Cards</a></h3>
   </div>
 
   <div class="product">
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1398834/bookbags.png">
+    <img src="/images/products/bookbags//bookbags-1.png">
     <h3><a href="/products/bookbags.html">Bookbags</a></h3>
   </div>
 
   <div class="product">
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1398834/laptop-bags.png">
+    <img src="/images/products/laptop-bags//laptop-bags-1.png">
     <h3><a href="/products/laptop-bags.html">Laptop Shoulder Bags</a></h3>
   </div>
 
   <div class="product">
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1398834/fashion-apparel.png">
+    <img src="/images/products/fashion/fashion-apparel-1.png">
     <h3><a href="/products/fashion-apparel.html">Fashion Apparel</a></h3>
   </div>
 
