Use baseurl and relative_url

--- a/products.html
+++ b/products.html
@@ -4,31 +4,31 @@
 <p class="page-description">These are just some of the crafts items that will be on sale in the lobby before and after the Central Teaching on Sunday, December 3rd.</p>
 <div class="products">
   <div class="product">
-    <img src="/images/products/ornaments/ornaments-1.png">
-    <h3><a href="/products/ornaments.html">Christmas Ornaments</a></h3>
+    <img src={{ "/images/products/ornaments/ornaments-1.png" | relative_url }}>
+    <h3><a href={{ "/products/ornaments.html" | relative_url }}>Christmas Ornaments</a></h3>
   </div>
   <div class="product">
-    <img src="/images/products/placemats/mats-1.png">
-    <h3><a href="/products/mats.html">Table Placemats and Coasters</a></h3>
+    <img src={{ "/images/products/placemats/mats-1.png" | relative_url }}>
+    <h3><a href={{ "/products/mats.html" | relative_url }}>Table Placemats and Coasters</a></h3>
   </div>
   <div class="product">
-    <img src="/images/products/greeting-cards/greeting-cards-1.png">
-    <h3><a href="/products/greeting-cards.html">Greeting Cards</a></h3>
-  </div>
-
-  <div class="product">
-    <img src="/images/products/bookbags//bookbags-1.png">
-    <h3><a href="/products/bookbags.html">Bookbags</a></h3>
+    <img src={{ "/images/products/greeting-cards/greeting-cards-1.png" | relative_url }}>
+    <h3><a href={{ "/products/greeting-cards.html" | relative_url }}>Greeting Cards</a></h3>
   </div>
 
   <div class="product">
-    <img src="/images/products/laptop-bags//laptop-bags-1.png">
-    <h3><a href="/products/laptop-bags.html">Laptop Shoulder Bags</a></h3>
+    <img src={{ "/images/products/bookbags//bookbags-1.png" | relative_url }}>
+    <h3><a href={{ "/products/bookbags.html" | relative_url }}>Bookbags</a></h3>
   </div>
 
   <div class="product">
-    <img src="/images/products/fashion/fashion-apparel-1.png">
-    <h3><a href="/products/fashion-apparel.html">Fashion Apparel</a></h3>
+    <img src={{ "/images/products/laptop-bags//laptop-bags-1.png" | relative_url }}>
+    <h3><a href={{ "/products/laptop-bags.html" | relative_url }}>Laptop Shoulder Bags</a></h3>
+  </div>
+
+  <div class="product">
+    <img src={{ "/images/products/fashion/fashion-apparel-1.png" | relative_url }}>
+    <h3><a href={{ "/products/fashion-apparel.html" | relative_url }}>Fashion Apparel</a></h3>
   </div>
 
 </div>
